First full working prototype working. Need to redo the event listeners because they work half of the time and sometimes they even work when they shouldn't.

--- a/index.html
+++ b/index.html
@@ -48,33 +48,35 @@
         <div style="display: none;" class="ghost_and_evidence_selection">
             <div class="evidence_window">
                 <h1>Evidence</h1>
-                <div class="evidence emf_5">
-                    <img src="/images/evidence/emf_5.webp">
-                    <h3>EMF Level 5</h3>
-                </div>
-                <div class="evidence fingerprints">
-                    <img src="/images/evidence/fingerprints.webp">
-                    <h3>Fingerprints</h3>
-                </div>
-                <div class="evidence writing">
-                    <img src="/images/evidence/writing.webp">
-                    <h3>Ghost Writing</h3>
-                </div>
-                <div class="evidence freezing">
-                    <img src="/images/evidence/freezing.webp">
-                    <h3>Freezing Temperatures</h3>
-                </div>
-                <div class="evidence dots">
-                    <img src="/images/evidence/dots.webp">
-                    <h3>D.O.T.S. Projector</h3>
-                </div>
-                <div class="evidence orbs">
-                    <img src="/images/evidence/orbs.webp">
-                    <h3>Ghost Orbs</h3>
-                </div>
-                <div class="evidence spirit_box">
-                    <img src="/images/evidence/spirit_box.webp">
-                    <h3>Spirit Box</h3>
+                <div>
+                    <div class="evidence emf_5" onclick="FilterEvidence('emf_5')">
+                        <img src="./images/evidence/emf_5.webp">
+                        <h3>EMF Level 5</h3>
+                    </div>
+                    <div class="evidence fingerprints" onclick="FilterEvidence('fingerprints')">
+                        <img src="./images/evidence/fingerprints.webp">
+                        <h3>Fingerprints</h3>
+                    </div>
+                    <div class="evidence writing" onclick="FilterEvidence('writing')">
+                        <img src="./images/evidence/writing.webp">
+                        <h3>Ghost Writing</h3>
+                    </div>
+                    <div class="evidence freezing" onclick="FilterEvidence('freezing')">
+                        <img src="./images/evidence/freezing.webp">
+                        <h3>Freezing Temperatures</h3>
+                    </div>
+                    <div class="evidence dots" onclick="FilterEvidence('dots')">
+                        <img src="./images/evidence/dots.webp">
+                        <h3>D.O.T.S. Projector</h3>
+                    </div>
+                    <div class="evidence orbs" onclick="FilterEvidence('orbs')">
+                        <img src="./images/evidence/orbs.webp">
+                        <h3>Ghost Orbs</h3>
+                    </div>
+                    <div class="evidence spirit_box" onclick="FilterEvidence('spirit_box')">
+                        <img src="./images/evidence/spirit_box.webp">
+                        <h3>Spirit Box</h3>
+                    </div>
                 </div>
             </div>
             <div class="ghost_selection">
