--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                 Credits</button>
         </div>
     </nav>
-    <main>
-        <div class="the_wheel">
-            <div class="needle">
-                <canvas></canvas>
+    <main class="triggers_wheel">
+        <div class="the_wheel triggers_wheel">
+            <div class="needle triggers_wheel">
+                <canvas class="triggers_wheel"></canvas>
             </div>
-            <div class="wheel rotate">
+            <div class="wheel rotate triggers_wheel">
                 <canvas>
                     <p>Sorry, your browser doesn't support canvas. Please try another.</p>
                 </canvas>
