--- a/index.html
+++ b/index.html
@@ -53,30 +53,37 @@
                         <img src="./images/evidence/emf_5.webp">
                         <h3>EMF Level 5</h3>
                     </div>
-                    <div class="evidence fingerprints" onclick="FilterEvidence('fingerprints')">
-                        <img src="./images/evidence/fingerprints.webp">
-                        <h3>Fingerprints</h3>
-                    </div>
-                    <div class="evidence writing" onclick="FilterEvidence('writing')">
-                        <img src="./images/evidence/writing.webp">
-                        <h3>Ghost Writing</h3>
-                    </div>
-                    <div class="evidence freezing" onclick="FilterEvidence('freezing')">
-                        <img src="./images/evidence/freezing.webp">
-                        <h3>Freezing Temperatures</h3>
-                    </div>
                     <div class="evidence dots" onclick="FilterEvidence('dots')">
                         <img src="./images/evidence/dots.webp">
                         <h3>D.O.T.S. Projector</h3>
+                    </div>
+                    <div class="evidence fingerprints" onclick="FilterEvidence('fingerprints')">
+                        <img src="./images/evidence/fingerprints.webp">
+                        <h3>Fingerprints</h3>
                     </div>
                     <div class="evidence orbs" onclick="FilterEvidence('orbs')">
                         <img src="./images/evidence/orbs.webp">
                         <h3>Ghost Orbs</h3>
                     </div>
+                    <div class="evidence writing" onclick="FilterEvidence('writing')">
+                        <img src="./images/evidence/writing.webp">
+                        <h3>Ghost Writing</h3>
+                    </div>
                     <div class="evidence spirit_box" onclick="FilterEvidence('spirit_box')">
                         <img src="./images/evidence/spirit_box.webp">
                         <h3>Spirit Box</h3>
                     </div>
+                    <div class="evidence freezing" onclick="FilterEvidence('freezing')">
+                        <img src="./images/evidence/freezing.webp">
+                        <h3>Freezing Temperatures</h3>
+                    </div>
+                </div>
+                <div class="evidence_selection_buttons">
+                    <button class="button" onclick="Filter_Selection('clear_evidence')">Clear evidence</button>
+                    <button class="button" onclick="Filter_Selection('clear_selection')">Clear selection</button>
+                    <button class="button" onclick="Filter_Selection('clear_all')">Clear all</button>
+                    <button class="button" onclick="Filter_Selection('filtered')">Select filtered</button>
+                    <button class="button" onclick="Filter_Selection('select_all')">Select all</button>
                 </div>
             </div>
             <div class="ghost_selection">
