--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
             <button class="saveBTN button" tabindex="-1" title="Save the current settings" onclick=SaveSetup()>Save
                 setup</button>
             <!-- <button class="shareBTN button" title="Load settings shared by another user" onclick=loadsettings()>Load</button> -->
-            <button class="aboutBTN button" title="About this page (redirect to github.com)" onclick=about()>About &
-                Credits</button>
+            <button class="aboutBTN button" title="About this page (redirect to github.com)" onclick=about()>Help & About</button>
         </div>
     </nav>
     <main class="triggers_wheel">
@@ -45,7 +44,7 @@
                 </canvas>
             </div>
         </div>
-        <div style="display: none;" class="ghost_and_evidence_selection">
+        <div class="ghost_and_evidence_selection">
             <div class="evidence_window">
                 <h1>Evidence</h1>
                 <div>
