--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <h3>Change page colors here:</h3>
                 <table class="page_colors">
                     <tr>
-                        <td>Main Color:</td>
+                        <td>Main Color (for unselected items):</td>
                         <td>
                             <input class="main_color color_picker" type="color"></input>
                         </td>
@@ -214,7 +214,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Secondary Color:</td>
+                        <td>Secondary Color (for selected items and details):</td>
                         <td>
                             <input class="secondary_color color_picker" type="color"></input>
                         </td>
@@ -224,7 +224,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Accent color:</td>
+                        <td>Accent color (for buttons and filtered):</td>
                         <td>
                             <input class="accent_color color_picker" type="color"></input>
                         </td>
@@ -234,7 +234,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Accent color negative:</td>
+                        <td>Accent color negative (for dangerous buttons):</td>
                         <td>
                             <input class="accent_color_negative color_picker" type="color"></input>
                         </td>
@@ -244,7 +244,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Text color</td>
+                        <td>Text color:</td>
                         <td>
                             <input class="text_color color_picker" type="color"></input>
                         </td>
