--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <h3></h3>
                     </div>
                     <div style="display:none;" class="orbs">
-                        <img src="/images/evidence/orbs.webp">
+                        <img src="./images/evidence/orbs.webp">
                         <h3>Ghost Orbs</h3>
                     </div>
                 </div>
