--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang='en'>
-
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <!--Include wheel.js-->
-    <script src="wheel.js"></script>
+    <script src="./wheel.js"></script>
 </head>
-
 <body>
     <nav>
         <h1 class="title">Phasmophobia Ghost Casino</h1>
@@ -281,5 +279,4 @@
         </div>
     </div>
 </body>
-
 </html>
