--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <h1 class="title">Phasmophobia Ghost Casino</h1>
+        <h1 class="title" title="V1.5.2">Phasmophobia Ghost Casino</h1>
         <div class="buttons">
             <button class="resetBTN button" tabindex="-1"
                 title="Resets all settings made by the user to default (ghost colors, page colors and spin time)."
@@ -134,7 +134,7 @@
                             <img>
                             <select class="evidence_select" onchange="UpdateEvidence(1)">
                                 <option value="emf_5">EMF Level 5</option>
-                                <option value="uv">uv</option>
+                                <option value="uv">Ultraviolet Evidence</option>
                                 <option value="writing">Ghost Writing</option>
                                 <option value="freezing">Freezing Temperatures</option>
                                 <option value="dots">D.O.T.S. Projector</option>
@@ -146,7 +146,7 @@
                             <img>
                             <select class="evidence_select" onchange="UpdateEvidence(2)">
                                 <option value="emf_5">EMF Level 5</option>
-                                <option value="uv">uv</option>
+                                <option value="uv">Ultraviolet Evidence</option>
                                 <option value="writing">Ghost Writing</option>
                                 <option value="freezing">Freezing Temperatures</option>
                                 <option value="dots">D.O.T.S. Projector</option>
@@ -158,7 +158,7 @@
                             <img>
                             <select class="evidence_select" onchange="UpdateEvidence(3)">
                                 <option value="emf_5">EMF Level 5</option>
-                                <option value="uv">uv</option>
+                                <option value="uv">Ultraviolet Evidence</option>
                                 <option value="writing">Ghost Writing</option>
                                 <option value="freezing">Freezing Temperatures</option>
                                 <option value="dots">D.O.T.S. Projector</option>
